Added project, fixed spacing for media queries, refinalized project descriptions

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <img class="recipe-app-text" src="/img/recipe-app.PNG">
               <div class="text-container">
               <h3> Recipe App </h3>
-              <h4> An application coded through react and python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a database. 
+              <h4> An application coded through React and Python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a local database. 
               <br/>
               <br/>
               </h4>
@@ -215,7 +215,7 @@
               <img class="sticky-note-text" src="/img/sticky-note1.PNG">
               <div class="text-container">
               <h3> Sticky Notes UI </h3>
-              <h4> An interactive Sticky Notes app built using React. It is a simple app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
+              <h4> An interactive Sticky Notes app built using React, managing data flows, DOM, and ES6. It is a simple app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
                 <br/>
                 <br/>
                 <br/>
@@ -240,7 +240,7 @@
               <img class="guess-the-word-text" src="/img/guess-the-word.PNG">
               <div class="text-container">
               <h3> Guess The Word Game </h3>
-              <h4> An interactive JavaScript game where players guess one letter at a time. Guess all the letters correctly in eight attempts, you win!
+              <h4> An interactive JavaScript game working with the DOM,where players guess one letter at a time. Guess all the letters correctly in eight attempts, you win!
               <br/>
               <br/>
               </h4>
@@ -264,7 +264,7 @@
               <img class="unplugged-text" src="/img/unplugged-transformed.png">
               <div class="text-container">
                 <h3> Unplugged </h3>
-                <h4> A multi-page responsive website coded through HTML and CSS. This site allows companies to schedule a retreat away from the workplace for their employees.
+                <h4> A multi-page responsive website hosted on Github and Netlify. Coded through HTML and CSS using Flexbox and Media Queries, this site allows companies to schedule a retreat away from the workplace for their employees.
                 </h4>
                 <div class="project-link1">
                 <a href="https://jodunn1.github.io/Unplugged/" target="_blank"> LIVE APP </a>
@@ -286,7 +286,7 @@
               <img class="rogue-pickings-text" src="/img/rogue-pickings.PNG">
               <div class="text-container">
               <h3 class="projects3"> Rogue Pickings </h3>
-              <h4> A simple home page for a meal preperation service. This website was coded through HTML and CSS and is fully responsive using Flexbox.
+              <h4> A simple home page for a meal preperation service. This website is hosted through Github and Netlify,coded through HTML and CSS and is fully responsive using Flexbox and Media Queries.
                 <br/>
                 <br/>
               </h4>
@@ -295,6 +295,27 @@
               </div>
               <div class="project-link2">
                 <a href="https://github.com/Jodunn1/Rogue-pickings-responsive" target="_blank"> LEARN MORE </a>
+              </div>
+            </div>
+            </div>
+          </div>
+          <svg class="blurredanimate6"></svg>
+          <div class="supervillain">
+            <div class="img-background blurred11">
+              <div class="supervillain-img-container">
+                <img src="/img/supervillain.PNG">
+              </div>
+            </div>
+            <div class="supervillain-text blurred12">
+              <img class="supervillain-text" src="/img/supervillain.PNG">
+              <div class="text-container">
+              <h3 class="projects3"> Supervillain Trading Card App </h3>
+              <h4> A dynamic web app hosted through replit which stores and displays supervillain trading cards using skills with SQL Databases, Jinja templating and Rest API.
+                <br/>
+                <br/>
+              </h4>
+              <div class="project-link1">
+                <a href="https://replit.com/@kidsolo33/Supervillain-trading-card" target="_blank"> LEARN MORE </a>
               </div>
             </div>
             </div>
