Added skill, fixed header name, fixex color contrast, fixed projects order

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="h3-container">
         <h3>
-        Hi I'm Jordan, a full stack developer based out of Santa Clarita,
+        Hi I'm Jordan Dunn, a full stack developer based out of Santa Clarita,
         California.
       </h3>
       </div>
@@ -78,24 +78,24 @@
     <div class="input">
     <button class="value">
       <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
-      <a href="#home"><span class="home-blue">Home</span></a>
+    <a href="#home"><span class="home-blue">Home</span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
     </button>
     <button class="value">
-      <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
-      <a href="#about"><span class="about-blue"><span class="about-blue2">About Me</span></span></a>
+      <svg id="Line2" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
+    <a href="#about"><span class="about-blue"><span class="about-blue2">About Me</span></span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
     </button>
     <button class="value">
       <svg id="svg8" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-        <g id="layer1" transform="translate(-33.022 -30.617)"></g>
+      <g id="layer1" transform="translate(-33.022 -30.617)"></g>
       </svg>
-      <a href="#projects"><span class="projects-blue"><span class="projects-blue2">Projects</span></span></a>
+    <a href="#projects"><span class="projects-blue"><span class="projects-blue2">Projects</span></span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
     </button>
     <button class="value">
       <svg fill="none" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg"></svg>
-      <a href="#contact"><span class="contact-blue">Contact</span></a>
+    <a href="#contact"><span class="contact-blue">Contact</span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
     </button>
   </div>
@@ -154,12 +154,17 @@
                 <img src="./img/react.cb15bfce2a9004ce61c5f79f805b067b.png">
                 <h3>React.js</h3>
               </div>
+
+              <div class="skill-list seven pop7">
+                <img src="./img/database.png">
+                <h3>SQL & API</h3>
+              </div>
             </div>
 
             <div class="skill-row3">
               <div class="skill-list five pop5">
                 <img class="js-img" src="./img/js.f8a28e905c78dadb79434b7ceebd52a0.png">
-                <h3>Javascript</h3>
+                <h3>JavaScript</h3>
               </div>
 
               <div class="skill-list six pop6">
@@ -253,26 +258,25 @@
             </div>
             </div>
           </div>
-          <svg class="blurredanimate1"></svg>
-          <div class="unplugged">
-            <div class="img-background blurred1">
-              <div class="unplugged-img-container">
-                <img src="/img/unplugged.PNG">
+          <svg class="blurredanimate6"></svg>
+          <div class="supervillain">
+            <div class="img-background blurred11">
+              <div class="supervillain-img-container">
+                <img src="/img/supervillain.PNG">
               </div>
             </div>
-            <div class="unplugged-text blurred2">
-              <img class="unplugged-text" src="/img/unplugged-transformed.png">
+            <div class="supervillain-text blurred12">
+              <img class="supervillain-text" src="/img/supervillain.PNG">
               <div class="text-container">
-                <h3> Unplugged </h3>
-                <h4> A multi-page responsive website hosted on Github and Netlify. Coded through HTML and CSS using Flexbox and Media Queries, this site allows companies to schedule a retreat away from the workplace for their employees.
-                </h4>
-                <div class="project-link1">
-                <a href="https://jodunn1.github.io/Unplugged/" target="_blank"> LIVE APP </a>
+              <h3 class="projects3"> Supervillain Trading Card App </h3>
+              <h4> A dynamic web app hosted through replit which stores and displays supervillain trading cards using skills with SQL Databases, Jinja templating and Rest API.
+                <br/>
+                <br/>
+              </h4>
+              <div class="project-link1">
+                <a href="https://replit.com/@kidsolo33/Supervillain-trading-card" target="_blank"> LEARN MORE </a>
               </div>
-              <div class="project-link2">
-                <a href="https://github.com/Jodunn1/Unplugged/tree/main" target="_blank"> LEARN MORE </a>
-              </div>
-              </div>
+            </div>
             </div>
           </div>
           <svg class="blurredanimate4"></svg>
@@ -299,25 +303,26 @@
             </div>
             </div>
           </div>
-          <svg class="blurredanimate6"></svg>
-          <div class="supervillain">
-            <div class="img-background blurred11">
-              <div class="supervillain-img-container">
-                <img src="/img/supervillain.PNG">
+          <svg class="blurredanimate1"></svg>
+          <div class="unplugged">
+            <div class="img-background blurred1">
+              <div class="unplugged-img-container">
+                <img src="/img/unplugged.PNG">
               </div>
             </div>
-            <div class="supervillain-text blurred12">
-              <img class="supervillain-text" src="/img/supervillain.PNG">
+            <div class="unplugged-text blurred2">
+              <img class="unplugged-text" src="/img/unplugged-transformed.png">
               <div class="text-container">
-              <h3 class="projects3"> Supervillain Trading Card App </h3>
-              <h4> A dynamic web app hosted through replit which stores and displays supervillain trading cards using skills with SQL Databases, Jinja templating and Rest API.
-                <br/>
-                <br/>
-              </h4>
-              <div class="project-link1">
-                <a href="https://replit.com/@kidsolo33/Supervillain-trading-card" target="_blank"> LEARN MORE </a>
+                <h3> Unplugged </h3>
+                <h4> A multi-page responsive website hosted on Github and Netlify. Coded through HTML and CSS using Flexbox and Media Queries, this site allows companies to schedule a retreat away from the workplace for their employees.
+                </h4>
+                <div class="project-link1">
+                <a href="https://jodunn1.github.io/Unplugged/" target="_blank"> LIVE APP </a>
               </div>
-            </div>
+              <div class="project-link2">
+                <a href="https://github.com/Jodunn1/Unplugged/tree/main" target="_blank"> LEARN MORE </a>
+              </div>
+              </div>
             </div>
           </div>
         </div>
@@ -342,7 +347,7 @@
             <input class="contact" type="email" placeholder="Email" name="email" required>
           </div>
           <div class="input-field">
-            <textarea type="text" placeholder="Message" name="message" required></textarea>
+            <textarea placeholder="Message" name="message" required></textarea>
           </div>
           <button><span>Submit</span></button>
       </div>
