added alt lines to imgs, added prefer-reduced-motion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 16 16"><path fill="#fff" d="M8 0c4.42 0 8 3.58 8 8a8.01 8.01 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38c0-.27.01-1.13.01-2.2c0-.75-.25-1.23-.54-1.48c1.78-.2 3.65-.88 3.65-3.95c0-.88-.31-1.59-.82-2.15c.08-.2.36-1.02-.08-2.12c0 0-.67-.22-2.2.82c-.64-.18-1.32-.27-2-.27s-1.36.09-2 .27c-1.53-1.03-2.2-.82-2.2-.82c-.44 1.1-.16 1.92-.08 2.12c-.51.56-.82 1.28-.82 2.15c0 3.06 1.86 3.75 3.64 3.95c-.23.2-.44.55-.51 1.07c-.46.21-1.61.55-2.33-.66c-.15-.24-.6-.83-1.23-.82c-.67.01-.27.38.01.53c.34.19.73.9.82 1.13c.16.45.68 1.31 2.69.94c0 .67.01 1.3.01 1.49c0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8"/></svg>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/jordan-dunn-bb5754283/">
-          <img src="/img/—Pngtree—linkedin white icon_3570423.png">
+          <img src="/img/—Pngtree—linkedin white icon_3570423.png" alt="white linked in logo">
         </a>
       </div>  
     </div>
@@ -134,41 +134,41 @@
           <div class="skill-rows">
             <div class="skill-row1">
               <div class="skill-list one pop">
-                <img src="./img/html.6aa56206be02cf6404844871df1d2da6.png">
+                <img src="./img/html.6aa56206be02cf6404844871df1d2da6.png" alt="red html logo">
                 <h3>HTML</h3>
               </div>
 
               <div class="skill-list two pop2">
-                <img src="./img/css.0ce0f0a2b4c4aa34b64c40e5278af3d1.png">
+                <img src="./img/css.0ce0f0a2b4c4aa34b64c40e5278af3d1.png" alt="blue css logo">
                 <h3>CSS</h3>
               </div>
             </div>
 
             <div class="skill-row2">
               <div class="skill-list three pop3">
-                <img src="./img/git.3092b5991e8accb9e7c36817c048a8d5.png">
+                <img src="./img/git.3092b5991e8accb9e7c36817c048a8d5.png" alt="red github logo">
                 <h3>Git</h3>
               </div>
 
               <div class="skill-list four pop4">
-                <img src="./img/react.cb15bfce2a9004ce61c5f79f805b067b.png">
+                <img src="./img/react.cb15bfce2a9004ce61c5f79f805b067b.png" alt="blue react logo">
                 <h3>React.js</h3>
               </div>
 
               <div class="skill-list seven pop7">
-                <img src="./img/database.png">
+                <img src="./img/database.png" alt="blue database icon">
                 <h3>SQL & API</h3>
               </div>
             </div>
 
             <div class="skill-row3">
               <div class="skill-list five pop5">
-                <img class="js-img" src="./img/js.f8a28e905c78dadb79434b7ceebd52a0.png">
+                <img class="js-img" src="./img/js.f8a28e905c78dadb79434b7ceebd52a0.png" alt="yellow javascript logo">
                 <h3>JavaScript</h3>
               </div>
 
               <div class="skill-list six pop6">
-                <img class="aboutme3" src="./img/icons8-python-153.png">
+                <img class="aboutme3" src="./img/icons8-python-153.png" alt="blue and yellow python logo">
                 <h3>Python</h3>
               </div>
             </div>
@@ -189,16 +189,16 @@
           <div class="recipe-app">
             <div class="img-background blurred3">
               <div class="recipe-app-img-container">
-                <img src="/img/recipe-app.PNG">
+                <img src="/img/recipe-app.PNG" alt="food recipe app landing page">
               </div>
             </div>
             <div class="recipe-app-text blurred4">
-            <img class="recipe-app-text" src="/img/recipe-app.PNG">
+            <img class="recipe-app-text" src="/img/recipe-app.PNG" alt="food recipe app landing page">
               <div class="text-container">
               <h3> Recipe App </h3>
               <h4> An application coded through React and Python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a local database. 
-              <br/>
-              <br/>
+              <br>
+              <br>
               </h4>
               <div class="project-link1">
                 <a href="https://recipe-card-app.netlify.app/" target="_blank"> LIVE APP </a>
@@ -213,17 +213,17 @@
           <div class="sticky-note">
             <div class="img-background blurred5">
               <div class="sticky-note-img-container">
-                <img src="/img/sticky-note1.PNG">
+                <img src="/img/sticky-note1.PNG" alt="sticky note app landing page">
               </div>
             </div>
             <div class="sticky-note-text blurred6">
-              <img class="sticky-note-text" src="/img/sticky-note1.PNG">
+              <img class="sticky-note-text" src="/img/sticky-note1.PNG" alt="sticky note app landing page">
               <div class="text-container">
               <h3> Sticky Notes UI </h3>
               <h4> An interactive Sticky Notes app built using React, managing data flows, DOM, and ES6. It is a simple app that lets users create “sticky notes” plus edit, delete, and search their to-do list items.
-                <br/>
-                <br/>
-                <br/>
+                <br>
+                <br>
+                <br>
               </h4>
               <div class="project-link1">
                 <a href="https://jv6drh.csb.app/" target="_blank"> LIVE APP </a>
@@ -238,16 +238,16 @@
           <div class="guess-the-word">
             <div class="img-background blurred9">
               <div class="guess-the-word-img-container">
-                <img src="/img/guess-the-word.PNG">
+                <img src="/img/guess-the-word.PNG" alt="guess the word game landing page">
               </div>
             </div>
             <div class="guess-the-word-text blurred10">
-              <img class="guess-the-word-text" src="/img/guess-the-word.PNG">
+              <img class="guess-the-word-text" src="/img/guess-the-word.PNG" alt="guess the word game landing page">
               <div class="text-container">
               <h3> Guess The Word Game </h3>
               <h4> An interactive JavaScript game working with the DOM,where players guess one letter at a time. Guess all the letters correctly in eight attempts, you win!
-              <br/>
-              <br/>
+              <br>
+              <br>
               </h4>
               <div class="project-link1">
                 <a href="https://jodunn1.github.io/guesstheword/" target="_blank"> LIVE APP </a>
@@ -262,16 +262,16 @@
           <div class="supervillain">
             <div class="img-background blurred11">
               <div class="supervillain-img-container">
-                <img src="/img/supervillain.PNG">
+                <img src="/img/supervillain.PNG" alt="supervillain trading card game landing page">
               </div>
             </div>
             <div class="supervillain-text blurred12">
-              <img class="supervillain-text" src="/img/supervillain.PNG">
+              <img class="supervillain-text" src="/img/supervillain.PNG" alt="supervillain trading card game landing page">
               <div class="text-container">
               <h3 class="projects3"> Supervillain Trading Card App </h3>
               <h4> A dynamic web app hosted through replit which stores and displays supervillain trading cards using skills with SQL Databases, Jinja templating and Rest API.
-                <br/>
-                <br/>
+                <br>
+                <br>
               </h4>
               <div class="project-link1">
                 <a href="https://replit.com/@kidsolo33/Supervillain-trading-card" target="_blank"> LEARN MORE </a>
@@ -283,16 +283,16 @@
           <div class="rogue-pickings">
             <div class="img-background blurred7">
               <div class="rogue-pickings-img-container">
-                <img src="/img/rogue-pickings.PNG">
+                <img src="/img/rogue-pickings.PNG" alt="food preparation service website landing page">
               </div>
             </div>
             <div class="rogue-pickings-text blurred8">
-              <img class="rogue-pickings-text" src="/img/rogue-pickings.PNG">
+              <img class="rogue-pickings-text" src="/img/rogue-pickings.PNG" alt="food preparation service website landing page">
               <div class="text-container">
               <h3 class="projects3"> Rogue Pickings </h3>
               <h4> A simple home page for a meal preperation service. This website is hosted through Github and Netlify,coded through HTML and CSS and is fully responsive using Flexbox and Media Queries.
-                <br/>
-                <br/>
+                <br>
+                <br>
               </h4>
               <div class="project-link1">
                 <a href="https://jodunn1.github.io/Rogue-pickings-responsive/" target="_blank"> LIVE APP </a>
@@ -307,11 +307,11 @@
           <div class="unplugged">
             <div class="img-background blurred1">
               <div class="unplugged-img-container">
-                <img src="/img/unplugged.PNG">
+                <img src="/img/unplugged.PNG" alt="business employee retreat website landing page">
               </div>
             </div>
             <div class="unplugged-text blurred2">
-              <img class="unplugged-text" src="/img/unplugged-transformed.png">
+              <img class="unplugged-text" src="/img/unplugged-transformed.png" alt="business employee retreat website landing page">
               <div class="text-container">
                 <h3> Unplugged </h3>
                 <h4> A multi-page responsive website hosted on Github and Netlify. Coded through HTML and CSS using Flexbox and Media Queries, this site allows companies to schedule a retreat away from the workplace for their employees.
@@ -340,15 +340,15 @@
       action="https://formspree.io/f/xdkojnok"
       method="POST">
         <div class="contact-form">
-          <div class="input-field">
+          <label class="input-field">
             <input class="contact-name" type="text" placeholder="Name" name="name" required>
-          </div>
-          <div class="input-field">
+          </label>
+          <label class="input-field">
             <input class="contact" type="email" placeholder="Email" name="email" required>
-          </div>
-          <div class="input-field">
+          </label>
+          <label class="input-field">
             <textarea placeholder="Message" name="message" required></textarea>
-          </div>
+          </label>
           <button><span>Submit</span></button>
       </div>
       </form>
