Fixed alt image text

--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
           <div class="recipe-app">
             <div class="img-background blurred3">
               <div class="recipe-app-img-container">
-                <img src="/img/recipe-app.PNG" alt="food recipe app landing page">
+                <img src="/img/recipe-app.PNG" alt="food recipe storage app landing page">
               </div>
             </div>
             <div class="recipe-app-text blurred4">
-            <img class="recipe-app-text" src="/img/recipe-app.PNG" alt="food recipe app landing page">
+            <img class="recipe-app-text" src="/img/recipe-app.PNG" alt="food recipe storage app landing page">
               <div class="text-container">
               <h3> Recipe App </h3>
               <h4> An application coded through React and Python in which the user is able to add their own recipes, view their added recipes, delete recipes, and save multiple recipes to a local database. 
