Changed nav buttons to div

--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
     </div>
   </header>
     <div class="input">
-    <button class="value">
+    <div class="value">
       <svg id="Line" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
     <a href="#home"><span class="home-blue">Home</span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-    </button>
-    <button class="value">
+    </div>
+    <div class="value">
       <svg id="Line2" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"></svg>
     <a href="#about"><span class="about-blue"><span class="about-blue2">About Me</span></span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-    </button>
-    <button class="value">
+    </div>
+    <div class="value">
       <svg id="svg8" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
       <g id="layer1" transform="translate(-33.022 -30.617)"></g>
       </svg>
     <a href="#projects"><span class="projects-blue"><span class="projects-blue2">Projects</span></span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-    </button>
-    <button class="value">
+    </div>
+    <div class="value">
       <svg fill="none" viewBox="0 0 24 25" xmlns="http://www.w3.org/2000/svg"></svg>
     <a href="#contact"><span class="contact-blue">Contact</span></a>
       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" data-name="Layer 2"></svg>
-    </button>
+    </div>
   </div>
 
   <main>
