Changed about me wording

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
         <div class="desc-container">
           <div class="about-desc-container">
             <h4 class="about-desc slided1">
-            Hello there! My name is Jordan Dunn. My professional goal is
-            becoming a full stack developer. As a kid I have always been
+            Hello there! My name is Jordan Dunn. As a Full Stack Developer I have always been
             intrigued with computers and learning how they work. Through
             researching different career paths in computer science, my eyes
             were opened to the world of web development. I enjoy web
