Fixed contact section overflow, about me desc, project desc

--- a/index.html
+++ b/index.html
@@ -110,11 +110,10 @@
           <div class="about-desc-container">
             <h4 class="about-desc slided1">
             Hello there! My name is Jordan Dunn. As a Full Stack Developer I have always been
-            intrigued with computers and learning how they work. Through
-            researching different career paths in computer science, my eyes
-            were opened to the world of web development. I enjoy web
-            development because it is challenging while also allowing me to
-            tap into my creative side.
+            intrigued with computers and learning how they work. I have with proven experience
+            in building and designing dynamic, user-friendly websites that support business growth 
+            and drive marketing efforts. With a solid foundation in both front-end and back-end technologies, 
+            I specialize in creating responsive, performance-optimized web applications that deliver a seamless user experience across all devices.
             </h4>
           </div>
           
@@ -199,11 +198,8 @@
               <br>
               <br>
               </h4>
-              <div class="project-link1">
-                <a href="https://recipe-card-app.netlify.app/" target="_blank"> LIVE APP </a>
-              </div>
               <div class="project-link2">
-                <a class="projects2" href="https://github.com/Jodunn1/Recipe-app" target="_blank"> LEARN MORE </a>
+                <a class="projects2" href="https://github.com/Jodunn1/Recipe-app-project" target="_blank"> LEARN MORE </a>
               </div>
             </div>
             </div>
@@ -273,7 +269,7 @@
                 <br>
               </h4>
               <div class="project-link1">
-                <a href="https://replit.com/@kidsolo33/Supervillain-trading-card" target="_blank"> LEARN MORE </a>
+                <a href="https://replit.com/@jordandunndev/Supervillain-trading-card-app" target="_blank"> LEARN MORE </a>
               </div>
             </div>
             </div>
